--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "bootstrap-css-only": "^3.3.6",
     "lodash": "^4.13.1",
     "moment": "^2.13.0",
-    "angular-ui-utils": "^3.0.0"
+    "angular-ui-utils": "^3.0.0",
+    "gsap": "^1.19.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.6"
